Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135396

Errors point to initial scxml file instead of the invoked where it happens

XMLWordPrintable

    • 64e85dcb7 (dev), 221b0f455 (6.10), a70758f7f (6.9), ffbed87ce (tqtc/lts-6.8)

      Attached example loads another state machine which has an error, but reported errors point to the initial file.

        For Gerrit Dashboard: QTBUG-135396
        # Subject Branch Project Status CR V

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes