Fix error reporting for nested state machines

Fixes: QTBUG-135396
Pick-to: 6.10 6.9 6.8
Change-Id: Ib564ff364e6b850425211fe933c6a184a1027bd1
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>