tests/auto/statemachine/tst_statemachine.cpp
@@ -45,7 +45,15 @@ private Q_SLOTS:
     void setTableDataUpdatesObjectNames();
 
     void finalizeRunsOnDoneInvokeEvents();
+    void errorsFromNestedStatemachine(); // QTBUG-135396
 };
+
+void tst_StateMachine::errorsFromNestedStatemachine()
+{
+    QScopedPointer<QScxmlStateMachine> machine(QScxmlStateMachine::fromFile(":/tst_statemachine/nestedinvoker.scxml"));
+    auto error = machine->parseErrors().front();
+    QCOMPARE(error.fileName(), "nestederror.scxml");
+}
 
 void tst_StateMachine::stateNames_data()
 {
